2007-09-19  Daniel Jacobowitz  <dan@codesourcery.com>

	* mips-tdep.c (mips_stub_frame_cache): Correct the saved return
	address register.  Correct the call to frame_id_build.
	(mips_stub_frame_sniffer): Use the stub unwinder when the PC
	is invalid.

2007-09-18  Joel Brobecker  <brobecker@adacore.com>

	* ia64-tdep.c (refine_prologue_limit): Make sure we don't scan
	the linetable past the function end.

2007-09-18  James E. Wilson  <wilson@specifix.com>

	* MAINTAINERS: Update my email address.

2007-09-18  Jerome Guitton  <guitton@adacore.com>

	* inf-ttrace.c (inf_ttrace_private_thread_info): New structure type.
	(inf_ttrace_delete_dying_threads_callback): New function.
	(inf_ttrace_resume): After resuming the execution, iterate over
	the dying threads to delete them for the thread list.
	(inf_ttrace_wait): on TTEVT_LWP_EXIT and TTEVT_LWP_TERMINATE,
	mark the corresponding thread as dying instead of removing it
	from the thread list.
	(inf_ttrace_thread_alive): return 0 for dying threads.

2007-09-17  Joel Brobecker  <brobecker@adacore.com>

	* infrun.c (insert_step_resume_breakpoint_at_frame): Add assertion
	that return_frame is not null.

2007-09-17  Joel Brobecker  <brobecker@adacore.com>

	* solib-svr4.c: Add include of "auxv.h".
	(enable_break): Use the AT_BASE auxiliary entry if available.
	* Makefile.in (solib-svr4.o): Update dependencies.

2007-09-17  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Create a new section for the next release branch.
	Rename the section of the current branch, now that it has
	been cut.

2007-09-17  Jerome Guitton  <guitton@adacore.com>

	* dwarf2loc.c (dwarf_expr_frame_base): Guard against NULL.
	* Makefile.in (dwarf2loc.o): Depend on gdb_assert.h.

2007-09-16  Vladimir Prus  <vladimir@codesourcery.com>

	* mi/mi-cmds.c (mi_cmds): Register -list-features.
	* mi/mi-cmds.h (mi_cmd_list_features): New.
	* mi/mi-main.c (mi_cmd_list_features): New.
	
2007-09-11  Joel Brobecker  <brobecker@adacore.com>
